# igo-nikki

./: .gitignore  Makefile.toml  README.md
.github/workflows/: deploy-web.yaml
analyzer/: Cargo.toml
analyzer/src/: interactive_json_process.rs  lib.rs  main.rs  sgf.rs
analyzer/src/models/: coord.rs  move_info.rs  query.rs  result.rs
analyzer/src/store/: fail_analyzing.rs  finish_analyzing.rs  get_analysis_job.rs  insert_analysis.rs  start_analyzing.rs  store.rs
graphql/: schema.graphql
graphql/queries/: delete_record.graphql  fail_analyzing.graphql  finish_analyzing.graphql  get_analysis.graphql  get_analysis_job.graphql  get_records.graphql  insert_analysis.graphql  insert_analysis_job.graphql  insert_record.graphql  start_analyzing.graphql
infra/: docker-compose.yml
infra/analyzer/: Dockerfile  schedule.txt
infra/hasura/: config.yaml
infra/katago/: Dockerfile
infra/postgresql/: 1_create_databases.sql  2_create_tables.sql  3_duplicate_database_for_test.sql
web/: .eslintrc.json  biome.json  biome.jsonc  bun.lockb  codegen.ts  deploy.cjs  index.html  localhost-key.pem  localhost.local-key.pem  localhost.local.pem  localhost.pem  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
web-deploy/: deploy.cjs  package.json
web/.husky/: pre-commit
web/src/: App.tsx  AppLayout.tsx  AuthProvider.tsx  feature.ts  main.tsx  vite-env.d.ts
web/src/components/: AnalysisChart.tsx  CustomDatePicker.tsx  GameInfo.tsx  GameList.tsx  GoPlayer.tsx  ImportDetail.modal.tsx  ListItem.tsx  RecordList.tsx  SelectImportMethod.modal.tsx
(+35 files in other folders)
